--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <title>Chess</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script src="script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Chess</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script src="script.js"></script>
+		<script src="moveValidation.js"></script>
+	</body>
 </html>
